# forecasting-sticker-sales

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml
docs/source/: conf.py  index.rst
notebooks/: first_model.ipynb
src/forecasting_sticker_sales/: __init__.py  __main__.py  settings.py
tests/pipelines/data_science/: test_pipeline.py
